<resources>
    <string name="app_name">G-Track</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="already_have_an_account">Don\'t Have Already Account?  <font color='#FD9927'>Sign Up</font></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_a_member_login_here">Already a member? Login here</string>
    <string name="enter_your_username">Enter your username...</string>
    <string name="enter_your_id">Enter your ID...</string>
    <string name="enter_your_mobile_number">Enter your mobile number...</string>
    <string name="enter_your_cnic">Enter your CNIC...</string>
    <string name="enter_your_child_s_id">Enter your child\'s ID</string>
    <string name="enter_your_password">Enter your password...</string>
    <string name="subject">Subject</string>
    <string name="forget_password">Forget Password?</string>
    <string name="reset_password">We just sent a 4 digit code to your mobile number. Please enter the code below to reset the password.</string>
    <string name="next">Next</string>
    <string name="reset_password_">Reset Password</string>
    <string name="title_activity_maps">Map</string>

</resources>
