<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.parentRegister"
    android:id="@+id/background_layout"
    android:background="@color/colorWhite">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <android.support.v7.widget.CardView
            android:id="@+id/register_page_cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:outlineAmbientShadowColor="@color/colorBlack"
            android:paddingBottom="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/registerLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradient"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/logoIcon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/oval"
                        android:padding="10dp"
                        android:src="@drawable/car_icon"
                        android:tint="@color/colorWhite" />

                    <TextView
                        android:id="@+id/registerTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/register"
                        android:textColor="@color/colorWhite"
                        android:textSize="22sp" />

                </LinearLayout>

                <ImageView

                    android:id="@+id/squareImage"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_below="@id/registerLinearLayout"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-10dp"
                    android:rotation="45"
                    android:src="@drawable/square" />

                <RelativeLayout
                    android:id="@+id/name_relative_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/squareImage"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="30dp">

                    <ImageView
                        android:id="@+id/name_icon_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/gradient"
                        android:padding="8dp"
                        android:src="@drawable/icon_parent_name"
                        android:tint="@color/colorWhite" />

                    <EditText
                        android:id="@+id/editText_parent_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/name_icon_image"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@id/name_icon_image"
                        android:background="@color/editTextBG"
                        android:hint="@string/enter_your_username"
                        android:inputType="text"
                        android:paddingLeft="20dp"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/password_relative_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/name_relative_layout"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp">

                    <ImageView
                        android:id="@+id/password_icon_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/gradient"
                        android:padding="8dp"
                        android:src="@drawable/icon_password"
                        android:tint="@color/colorWhite" />

                    <EditText
                        android:id="@+id/editText_parent_passwordR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/password_icon_image"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@id/password_icon_image"
                        android:background="@color/editTextBG"
                        android:hint="@string/enter_your_password"
                        android:inputType="textPassword"
                        android:paddingLeft="20dp"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/childName_relative_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/password_relative_layout"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp">

                    <ImageView
                        android:id="@+id/childName_icon_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/gradient"
                        android:padding="8dp"
                        android:src="@drawable/icon_parent_name"
                        android:tint="@color/colorWhite" />

                    <EditText
                        android:id="@+id/editText_child_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/childName_icon_image"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@id/childName_icon_image"
                        android:background="@color/editTextBG"
                        android:hint="@string/enter_your_child_s_id"
                        android:inputType="number"
                        android:maxLength="8"
                        android:paddingLeft="20dp"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/cnic_relative_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/childName_relative_layout"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp">

                    <ImageView
                        android:id="@+id/cnic_icon_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/gradient"
                        android:padding="8dp"
                        android:src="@drawable/icon_cnic_card"
                        android:tint="@color/colorWhite" />

                    <EditText
                        android:id="@+id/editText_parent_cnic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/cnic_icon_image"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@id/cnic_icon_image"
                        android:background="@color/editTextBG"
                        android:hint="@string/enter_your_cnic"
                        android:inputType="number"
                        android:maxLength="13"
                        android:paddingLeft="20dp"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/phone_relative_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cnic_relative_layout"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp">

                    <ImageView
                        android:id="@+id/phone_icon_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/gradient"
                        android:padding="8dp"
                        android:src="@drawable/icon_parent_name"
                        android:tint="@color/colorWhite" />

                    <EditText
                        android:id="@+id/editText_parent_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/phone_icon_image"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@id/phone_icon_image"
                        android:background="@color/editTextBG"
                        android:hint="@string/enter_your_mobile_number"
                        android:inputType="phone"
                        android:maxLength="11"
                        android:paddingLeft="20dp"
                        android:textSize="15sp" />
                </RelativeLayout>

                <Button
                    android:id="@+id/btn_signUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/phone_relative_layout"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/buttondraw"
                    android:enabled="false"
                    android:fontFamily="sans-serif-medium"
                    android:onClick="registerParent"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"

                    />

                <Button
                    android:id="@+id/parent_login_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btn_signUp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/transparent"
                    android:onClick="loginActivity"
                    android:text="@string/already_a_member_login_here"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>
    </ScrollView>

</android.support.constraint.ConstraintLayout>