<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".parentLogin"
    android:id="@+id/parent_login"
    android:background="@color/colorPrimary">


    <android.support.v7.widget.CardView
        android:id="@+id/parent_login_CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/parent_login_RelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/student_login_LineraLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/parent_login_logoIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/oval"
                    android:padding="10dp"
                    android:src="@drawable/car_icon"
                    android:tint="@color/colorWhite" />

                <TextView
                    android:id="@+id/student_login_Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/login"
                    android:textColor="@color/colorWhite"
                    android:textSize="22sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/parent_login_squareImage"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@id/student_login_LineraLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-10dp"
                android:rotation="45"
                android:src="@drawable/square" />

            <RelativeLayout
                android:id="@+id/parent_login_name_relative_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/parent_login_squareImage"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp">

                <ImageView
                    android:id="@+id/parent_login_name_icon_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/colorAccent"
                    android:padding="8dp"
                    android:src="@drawable/icon_parent_name"
                    android:tint="@color/colorWhite" />

                <EditText
                    android:id="@+id/editText_parent_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/parent_login_name_icon_image"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@id/parent_login_name_icon_image"
                    android:background="@color/editTextBG"
                    android:hint="@string/enter_your_username"
                    android:paddingLeft="20dp"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/parent_login_password_relative_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/parent_login_name_relative_layout"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp">

                <ImageView
                    android:id="@+id/parent_login_password_icon_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/colorAccent"
                    android:padding="8dp"
                    android:src="@drawable/icon_password"
                    android:tint="@color/colorWhite" />

                <EditText
                    android:id="@+id/editText_parent_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/parent_login_password_icon_image"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@id/parent_login_password_icon_image"
                    android:background="@color/editTextBG"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:textSize="15sp" />
            </RelativeLayout>

            <Button
                android:id="@+id/parent_btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/parent_login_password_relative_layout"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorAccent"
                android:fontFamily="sans-serif-medium"
                android:onClick="parentLogin"
                android:text="@string/login"
                android:enabled="false"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />
            <Button
                android:id="@+id/parent_btn_forgetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/parent_btn_login"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:background="@color/transparent"
                android:fontFamily="sans-serif-medium"
                android:onClick="forgetPassword"
                android:text="@string/forget_password"
                android:textColor="@color/colorBlack"
                android:textAllCaps="false"
                android:textSize="15sp" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>